Fix alignment

--- a/frontend/pages/hosts/details/cards/Software/SelfService/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Software/SelfService/_styles.scss
@@ -33,6 +33,10 @@
       gap: $pad-small;
     }
 
+    .self-service-table__status-content {
+      min-width: 100px; // No table layout shift when changed to pending status
+    }
+
     .self-service-table__item-status-button {
       height: auto;
     }
@@ -40,7 +44,11 @@
     .self-service-table__item-actions {
       display: flex;
       flex-direction: row;
-      gap: $pad-medium;
+      gap: $pad-large;
+    }
+
+    .self-service-table__item-action {
+      min-width: 82px; // Second action buttons align between rows
     }
   }
 
